--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "express-handlebars": "^4.0.2",
     "method-override": "^3.0.0",
     "mongoose": "^5.9.7"
+  },
+  "devDependencies": {
+    "dotenv": "^16.0.3"
   }
 }
